@@ -77,6 +77,9 @@
                 <td><img src="../Sample_products/images/" data-im="productdetail@photofile@#src"></td>
             </tr>
             </tbody>
+            <tfoot>
+            <tr><td><button onclick="IMLibPageNavigation.moveDetailOnceAgain()">Update</button></td></tr>
+            </tfoot>
         </table>
     </div>
     <br clear="all">
